--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Danielle Rose
 description: Public Historian & Museum Educator
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/roseda12/jekyll-now/master/images/roses.png
+avatar: https://raw.githubusercontent.com/roseda12/jekyll-now/master/images/roses2.jpg
 
 #
 # Flags below are optional
